Fix data persistence: mount volume to /home/node (node user's HOME), fix ownership
Previously mounted to /home/user but the node user's HOME is /home/node,
so all project files were written to ephemeral container storage and lost
on every restart. Now mounts directly to /home/node and chowns to uid 1000.

--- a/Dockerfile.editor
+++ b/Dockerfile.editor
@@ -49,14 +49,14 @@ RUN node -e " \
 RUN npm install --production
 
 # node:22-slim already has uid 1000 as 'node' user
-# Make app readable by node user and create home mount point
-RUN chown -R node:node /app && mkdir -p /home/user && chown node:node /home/user
+# Make app readable by node user
+RUN chown -R node:node /app
 
 # Install Julia dependencies as node user so compiled cache is accessible at runtime
 USER node
 ENV JULIA_DEPOT_PATH="/app/.julia"
 RUN cd /app/mrmd-julia && julia --project=. -e 'using Pkg; Pkg.instantiate(); Pkg.precompile()'
-WORKDIR /home/user
+WORKDIR /home/node
 
 EXPOSE 8080
 
