--- a/Dockerfile.editor
+++ b/Dockerfile.editor
@@ -1,43 +1,51 @@
 FROM node:22-slim
 
-# Python + R + tools
+# ── Stage 1: System packages (rarely changes) ───────────────────────
 RUN apt-get update && apt-get install -y \
     python3 python3-venv python3-pip \
     r-base r-base-dev \
     bash curl git procps wget gpg \
     && rm -rf /var/lib/apt/lists/*
 
-# Install R packages needed by mrmd-r
+# R packages (rarely changes)
 RUN Rscript -e 'install.packages(c("httpuv", "jsonlite", "evaluate", "later"), repos="https://cloud.r-project.org")'
 
-# Install Julia
+# Julia binary (rarely changes)
 RUN wget -qO- https://julialang-s3.julialang.org/bin/linux/x64/1.11/julia-1.11.3-linux-x86_64.tar.gz | tar xz -C /opt \
     && ln -s /opt/julia-1.11.3/bin/julia /usr/local/bin/julia
 
 # uv for fast Python package management
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
 
-# Copy all packages needed by mrmd-server
+# ── Stage 2: Julia precompilation (only rebuilds when mrmd-julia changes) ──
+# Copy ONLY mrmd-julia first, so this expensive layer is cached independently
+COPY mrmd-julia/ /app/mrmd-julia/
+RUN chown -R node:node /app/mrmd-julia && mkdir -p /app/.julia && chown node:node /app/.julia
+USER node
+ENV JULIA_DEPOT_PATH="/app/.julia"
+RUN cd /app/mrmd-julia && julia --project=. -e 'using Pkg; Pkg.instantiate(); Pkg.precompile()'
+USER root
+
+# ── Stage 3: Node packages + app code (changes frequently, rebuilds fast) ──
+COPY mrmd-r/ /app/mrmd-r/
 COPY mrmd-project/ /app/mrmd-project/
 COPY mrmd-sync/ /app/mrmd-sync/
 COPY mrmd-electron/ /app/mrmd-electron/
 COPY mrmd-server/ /app/mrmd-server/
-COPY mrmd-r/ /app/mrmd-r/
-COPY mrmd-julia/ /app/mrmd-julia/
 
-# Install mrmd-project deps (dependency of mrmd-server)
+# Install mrmd-project deps
 WORKDIR /app/mrmd-project
 RUN npm install --production
 
-# Install mrmd-sync deps (spawned as child process by mrmd-server)
+# Install mrmd-sync deps
 WORKDIR /app/mrmd-sync
 RUN npm install --production
 
-# Install mrmd-electron deps (services used by mrmd-server, xterm for UI)
+# Install mrmd-electron deps
 WORKDIR /app/mrmd-electron
 RUN npm install --production --ignore-scripts
 
-# Point mrmd-server's dependencies to local copies instead of npm registry
+# Point mrmd-server's dependencies to local copies
 WORKDIR /app/mrmd-server
 RUN node -e " \
   const pkg = require('./package.json'); \
@@ -48,19 +56,11 @@ RUN node -e " \
 "
 RUN npm install --production
 
-# node:22-slim already has uid 1000 as 'node' user
-# Make app readable by node user
+# Fix ownership for everything
 RUN chown -R node:node /app
 
-# Install Julia dependencies as node user so compiled cache is accessible at runtime
 USER node
-ENV JULIA_DEPOT_PATH="/app/.julia"
-RUN cd /app/mrmd-julia && julia --project=. -e 'using Pkg; Pkg.instantiate(); Pkg.precompile()'
 WORKDIR /home/node
-
 EXPOSE 8080
 
-# --no-auth: orchestrator handles auth via Caddy
-# CLOUD_MODE env var activates CloudSessionService (connects to runtime container)
-# RUNTIME_PORT env var tells it where the runtime container's MRP endpoint is
 CMD ["node", "/app/mrmd-server/bin/cli.js", "--port", "8080", "--host", "0.0.0.0", "--no-auth"]
