fix: add /static/* file_server to Caddyfile
The Caddyfile was missing the static file serving block, so all
/static/* requests fell through to the orchestrator which returned
HTML. Browsers then blocked the scripts due to MIME type mismatch
(text/html instead of text/javascript with X-Content-Type-Options: nosniff).

The JSON caddy-config.js had the route but Caddy uses the Caddyfile,
not the JSON config (the orchestrator's JSON push gets overridden
on Caddy restart/reload).

--- a/orchestrator/Caddyfile
+++ b/orchestrator/Caddyfile
@@ -2,7 +2,7 @@
     admin localhost:2019
 }
 
-feuille.dev {
+markco.dev {
     # Published sites
     handle /@* {
         reverse_proxy localhost:3003
@@ -23,8 +23,23 @@ feuille.dev {
     handle /login {
         reverse_proxy localhost:3000
     }
+    handle /login/* {
+        reverse_proxy localhost:3000
+    }
+    handle /sandbox {
+        reverse_proxy localhost:3000
+    }
+    handle /logout {
+        reverse_proxy localhost:3000
+    }
     handle /dashboard {
         reverse_proxy localhost:3000
+    }
+
+    # Static assets (editor JS, sandbox shims, fonts, xterm)
+    handle /static/* {
+        root * /opt/markco/static
+        file_server
     }
 
     # Default: orchestrator handles routing
