feat: auth improvements, runtime management, Android TWA support
- Auth service: add user lifecycle and session management
- Compute manager: improve runtime handling and podman integration
- Orchestrator: add Caddy config updates, service client, browser shim improvements
- Add Android TWA documentation and sync-relay service
- Update production docs and runbook
- Bump service versions

--- a/compute-manager/package.json
+++ b/compute-manager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@feuille/compute-manager",
+  "name": "@markco/compute-manager",
   "version": "0.1.0",
   "private": true,
   "type": "module",
