--- a/publish-service/package.json
+++ b/publish-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@feuille/publish-service",
+  "name": "@markco/publish-service",
   "version": "0.1.0",
   "private": true,
   "scripts": {
