--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@feuille/auth-service",
+  "name": "@markco/auth-service",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,10 +7,10 @@
     "test": "node --test test/auth.test.js"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.990.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.12.0"
-  },
-  "devDependencies": {}
+  }
 }
