--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@feuille/orchestrator",
+  "name": "@markco/orchestrator",
   "version": "0.1.0",
   "private": true,
   "type": "module",
